Transaction detail and delete APIs completed
