# src/config/swaggerDocument.yaml
@@ -192,14 +192,12 @@ paths:
           application/json:
             schema:
               type: object
-              required: [email, newPassword]
+              required: [oldPassword, newPassword]
               properties:
-                email:
+                oldPassword:
                   type: string
-                  format: email
                 newPassword:
                   type: string
-                  format: password
       responses:
         '200':
           description: Password reset successful
@@ -621,6 +619,132 @@ paths:
                               total:
                                 type: number
                                 example: 4000
+        '401':
+          description: Unauthorized - invalid token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  displayMessage:
+                    type: string
+                    example: "Invalid token"
+                  statusCode:
+                    type: integer
+                    example: 401
+                  status:
+                    type: string
+                    example: "failed"
+        '400':
+          $ref: '#/components/responses/InvalidArguments'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
+  /transaction/detail:
+    get:
+      tags: [Transaction]
+      summary: Get Transaction Details
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: date
+          in: query
+          required: true
+          description: Transaction date
+          schema:
+            type: string
+          example: "2025-12-30"
+      responses:
+        '200':
+          description: Transactions fetched successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  displayMessage:
+                    type: string
+                    example: "Transaction data fetched successfully"
+                  statusCode:
+                    type: integer
+                    example: 200
+                  status:
+                    type: string
+                    example: "success"
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                          example: 122k2k-12js92-n1k212s
+                        type:
+                          type: string
+                          example: income
+                        category:
+                          type: string
+                          example: salary
+                        description:
+                          type: string
+                          example: some description
+                        amount:
+                          type: number
+                          example: 20000
+        '401':
+          description: Unauthorized - invalid token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  displayMessage:
+                    type: string
+                    example: "Invalid token"
+                  statusCode:
+                    type: integer
+                    example: 401
+                  status:
+                    type: string
+                    example: "failed"
+        '400':
+          $ref: '#/components/responses/InvalidArguments'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
+  /transaction/:id:
+    delete:
+      tags: [Transaction]
+      summary: Delete a Transaction
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: Transaction ID
+          in: params
+          required: true
+          description: Transaction ID
+          schema:
+            type: string
+          example: 2932n-2isdj3-2kn923
+      responses:
+        '200':
+          description: Transactions deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  displayMessage:
+                    type: string
+                    example: "Transaction deleted successfully"
+                  statusCode:
+                    type: integer
+                    example: 200
+                  status:
+                    type: string
+                    example: "success"
+                  data:
+                    type: object
         '401':
           description: Unauthorized - invalid token
           content:
