# src/routes/transactionRoutes.ts
@@ -1,6 +1,6 @@
 import express from 'express';
 import { validateUser } from '../middlewares/userValidation';
-import { createTransaction, getTransactionDataForMonth, getTransactionsList, updateTransaction } from '../controllers/transactionController';
+import { createTransaction, deleteTransaction, getTransactionDataForMonth, getTransactionDetail, getTransactionsList, updateTransaction } from '../controllers/transactionController';
 
 export const transactionRoutes = express.Router();
 
@@ -8,3 +8,5 @@ transactionRoutes.post("/create", validateUser, createTransaction);
 transactionRoutes.put("/update", validateUser, updateTransaction);
 transactionRoutes.get("/overview", validateUser, getTransactionDataForMonth)
 transactionRoutes.get("/list", validateUser, getTransactionsList)
+transactionRoutes.get("/detail", validateUser, getTransactionDetail)
+transactionRoutes.delete("/:id", validateUser, deleteTransaction)
